limpar and calcular ok

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
                     <div class="row">
                         <div class="col">
-                            <button type="submit" class="btn btn-primary mt-2" name="calcular" id="calcular" onclick="tabuadaWhile()">CALCULAR</button>
+                            <button type="submit" class="btn btn-primary mt-2" name="btn-calcular" id="btn-calcular">CALCULAR</button>
                         </div>
 
                         <div class="col">
-                            <button type="submit" class="btn btn-danger mt-2">LIMPAR</button>
+                            <button type="submit" class="btn btn-danger mt-2" name="btn-limpar" id="btn-limpar">LIMPAR</button>
                         </div>
                     </div>
                 </form>
@@ -57,8 +57,8 @@
                             </tr>
                         </thead>
 
-                        <tbody id="reultadoTabuada">
-                            <tr>
+                        <tbody id="resultadoTabuada">
+                            <!-- <tr>
                                 <td>1 X 0 = 0</td>
                             </tr>
                             <tr>
@@ -90,7 +90,7 @@
                             </tr>
                             <tr>
                                 <td>1 X 10 = 10</td>
-                            </tr>
+                            </tr> -->
                         </tbody>
 
                     </table>
